--- a/hello/templates/hello/home.html
+++ b/hello/templates/hello/home.html
@@ -1,32 +1,76 @@
-{% extends "hello/layout.html" %}
-{% block title %}
-    Home
-{% endblock %}
+{% extends "hello/layout.html" %} {% block title %} Home {% endblock %}
+<!---->
 {% block content %}
-    <h2>Logged messages</h2>
+<form method="GET" action="{% url 'search_results' %}">
+  {% csrf_token %}
+  <input type="text" name="search_query" placeholder="Search...">
+  <button type="submit">Search</button>
+</form>
+</form>
+<h2>Logged messages</h2>
 
-    {% if message_list %}
-        <table class="message_list">
-            <thead>
-            <tr>
-                <th>Date</th>
-                <th>Time</th>
-                <th>Message</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for message in message_list %}
-                <tr>
-                    <td>{{ message.log_date | date:'d M Y' }}</td>
-                    <td>{{ message.log_date | time:'H:i:s' }}</td>
-                    <td>
-                        {{ message.message }}
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    {% else %}
-        <p>No messages have been logged. Use the <a href="{% url 'log' %}">Log Message form</a>.</p>
-    {% endif %}
-{% endblock %}
+{% if message_list %}
+<table class="message_list">
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Time</th>
+      <th>Message</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for message in message_list %}
+    <tr>
+      <td>{{ message.log_date | date:'d M Y' }}</td>
+      <td>{{ message.log_date | time:'H:i:s' }}</td>
+      <td>{{ message.message }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+{% else %}
+<p>
+  No messages have been logged. Use the
+  <a href="{% url 'log' %}">Log Message form</a>.
+</p>
+{% endif %}
+<!-- the below code is for displaying the employer information on the home page -->
+{% if employer_list %}
+<table class="employer_list">
+  <thead>
+    <tr>
+      <th>Company Name</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+      <th>Alumni</th>
+      <th>Can We Release Your Info</th>
+      <th>ID Number</th>
+      <th>Checked In</th>
+      <th>Check In Time</th>
+      <th>Table Number</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for entry in employer_list %}
+    <tr>
+      <td>{{ entry.Company_name }}</td>
+      <td>{{ entry.First_name }}</td>
+      <td>{{ entry.Last_name }}</td>
+      <td>{{ entry.Email }}</td>
+      <td>{{ entry.Alumni }}</td>
+      <td>{{ entry.Release_info }}</td>
+      <td>{{ entry.Id_number }}</td>
+      <td>{{ entry.Checked_in }}</td>
+      <td>{{ entry.Checked_in_time }}</td>
+      <td>{{ entry.Table_number }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+{% else %}
+<p>
+  There are no entried in the database. Use the
+  <a href="{% url 'log' %}">Import file page to import entries</a>.
+</p>
+{% endif %} {% endblock %}
