--- a/hello/templates/hello/contact.html
+++ b/hello/templates/hello/contact.html
@@ -1,7 +1,4 @@
-{% extends "hello/layout.html" %}
-{% block title %}
-    Contact Us
-{% endblock %}
-{% block content %}
-    <p>Contact page for the Visual Studio Code Django tutorial.</p>
+{% extends "hello/layout.html" %} {% block title %} Contact Us {% endblock %} {%
+block content %}
+<p>Contact page for the Visual Studio Code Django tutorial.</p>
 {% endblock %}
