--- a/hello/templates/hello/home.html
+++ b/hello/templates/hello/home.html
@@ -1,7 +1,7 @@
 {% extends "hello/layout.html" %} {% block title %} Home {% endblock %}
 <!---->
 {% block content %}
-<form method="GET" action="{% url 'search_results' %}">
+<form method="GET" action="{% url 'search_by_id' %}">
   {% csrf_token %}
   <input type="text" name="search_query" placeholder="Search...">
   <button type="submit">Search</button>
@@ -9,34 +9,4 @@
 </form>
 <h2>Logged messages</h2>
 
-{% if message_list %}
-<table class="message_list">
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Time</th>
-      <th>Message</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for message in message_list %}
-    <tr>
-      <td>{{ message.log_date | date:'d M Y' }}</td>
-      <td>{{ message.log_date | time:'H:i:s' }}</td>
-      <td>{{ message.message }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-{% else %}
-<p>
-  No messages have been logged. Use the
-  <a href="{% url 'log' %}">Log Message form</a>.
-</p>
-{% endif %}
-<!-- the below code is for displaying the employer information on the home page -->
-<p>
-  There are no entried in the database. Use the
-  <a href="{% url 'log' %}">Import file page to import entries</a>.
-</p>
- {% endblock %}
+{% endblock %}
