Added qr code email send using id and changed db to mockdata

--- a/hello/templates/hello/layout.html
+++ b/hello/templates/hello/layout.html
@@ -16,6 +16,12 @@
         <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
         <a href="{% url 'db_display' 1 %}" class="navbar-item">View Database</a>
         <a href="{% url 'id_search' %}" class="navbar-item">Search by ID</a>
+        {% if user.is_authenticated %}
+        <li>User: {{ user.get_username }}</li>
+        <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
+        {% else %}
+        <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
+        {% endif %}
 
     </div>
 
