--- a/hello/templates/hello/home.html
+++ b/hello/templates/hello/home.html
@@ -1,12 +1,9 @@
-{% extends "hello/layout.html" %} {% block title %} Home {% endblock %}
-<!---->
+{% extends "hello/layout.html" %} {% block title %} Home {% endblock %} 
 {% block content %}
 <form method="GET" action="{% url 'search_by_id' %}">
   {% csrf_token %}
-  <input type="text" name="search_query" placeholder="Search...">
+  <input type="text" name="search_query" placeholder="Search..." />
   <button type="submit">Search</button>
 </form>
-
-<h2>Logged messages</h2>
 
 {% endblock %}
