--- a/hello/templates/hello/layout.html
+++ b/hello/templates/hello/layout.html
@@ -2,37 +2,47 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <title>{% block title %}{% endblock %}</title>
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
+  <meta charset="utf-8" />
+  <title>{% block title %}{% endblock %}</title>
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
 </head>
 
+<h2>System messages</h2>
+{% if messages %}
+<ul class="messages">
+  {% for message in messages %}
+  <li>{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+  {% endfor %}
+</ul>
+{% endif %}
+
 <body>
-    <div class="navbar">
-        <a href="{% url 'home' %}" class="navbar-brand">Home</a>
-        <a href="{% url 'add_entry' %}" class="navbar-item">Add Entry</a>
-        <a href="{% url 'about' %}" class="navbar-item">About</a>
-        <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
-        <a href="{% url 'db_display' 1 %}" class="navbar-item">View Database</a>
-        <a href="{% url 'id_search' %}" class="navbar-item">Search by ID</a>
-        {% if user.is_authenticated %}
-        <li>User: {{ user.get_username }}</li>
-        <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
-        {% else %}
-        <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
-        {% endif %}
+  <div class="navbar">
+    <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+    <a href="{% url 'add_entry' %}" class="navbar-item">Add Entry</a>
+    <a href="{% url 'about' %}" class="navbar-item">About</a>
+    <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
+    <a href="{% url 'db_display' 1 %}" class="navbar-item">View Database</a>
+    <a href="{% url 'id_search' %}" class="navbar-item">Search by ID</a>
+    <a href="{% url 'add_new_data' %}" class="navbar-item">Upload Data</a>
+    {% if user.is_authenticated %}
+    <li>User: {{ user.get_username }}</li>
+    <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
+    {% else %}
+    <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
+    {% endif %}
 
-    </div>
+  </div>
 
-    <div class="body-content">
-        {% block content %}
-        {% endblock %}
-        <hr />
-        <footer>
-            <p>&copy; 2023</p>
-        </footer>
-    </div>
+  <div class="body-content">
+    {% block content %}
+    {% endblock %}
+    <hr />
+    <footer>
+      <p>&copy; 2023</p>
+    </footer>
+  </div>
 </body>
 
 </html>
