--- a/hello/templates/hello/database_upload_page.html
+++ b/hello/templates/hello/database_upload_page.html
@@ -1,19 +1,46 @@
-{% extends "hello/layout.html" %} {% block title %} Upload New Database {%endblock %} {% block content %}
+{% extends "hello/layout.html" %}
+{% block title %} Upload New Database {% endblock %}
+{% block content %}
 
 <h2>Upload a new database file to the server</h2>
 
-<form
-  method="post"
-  enctype="multipart/form-data"
-  action="{% url 'add_new_data' %}"
-  class="entry-form"
->
+<form method="post" enctype="multipart/form-data" action="{% url 'add_new_data' %}" class="entry-form">
   {% csrf_token %}
 
   <div class="form-group">
     <label for="file">CSV File Path:</label>
     <input type="file" class="form-control-file" id="file" name="file" />
   </div>
+<h2>Enter the letters of the columns which match the following fields</h2>
+  <div class="form-group">
+    <label for="Company_Name_box">Company Name:</label>
+    <input type="text" class="form-control" id="Company_Name_box" name="Company_Name_box" />
+  </div>
+  <div class="form-group">
+    <label for="First_Name_box">First Name:</label>
+    <input type="text" class="form-control" id="First_Name_box" name="First_Name_box" />
+  </div>
+  <div class="form-group">
+    <label for="Last_Name_box">Last Name:</label>
+    <input type="text" class="form-control" id="Last_Name_box" name="Last_Name_box" />
+  </div>
+  <div class="form-group">
+    <label for="Email_box">Email:</label>
+    <input type="text" class="form-control" id="Email_box" name="Email_box" />
+  </div>
+  <div class="form-group">
+    <label for="Alumni_box">Alumni:</label>
+    <input type="text" class="form-control" id="Alumni_box" name="Alumni_box" />
+  </div>
+  <div class="form-group">
+    <label for="Info_Release_box">Can we release your info:</label>
+    <input type="text" class="form-control" id="Info_Release_box" name="Info_Release_box" />
+  </div>
+  <div class="form-group">
+    <label for="Table_Number_box">Table Number:</label>
+    <input type="text" class="form-control" id="Table_Number_box" name="Table_Number_box" />
+  </div>
+
 
   <button class="btn btn-primary" name="import" type="submit">Upload</button>
 
