--- a/hello/templates/hello/layout.html
+++ b/hello/templates/hello/layout.html
@@ -21,8 +21,7 @@
   <div class="navbar">
     <a href="{% url 'home' %}" class="navbar-brand">Home</a>
     <a href="{% url 'add_entry' %}" class="navbar-item">Add Entry</a>
-    <a href="{% url 'about' %}" class="navbar-item">About</a>
-    <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
+    <a href="{% url 'qr_email_page' %}" class="navbar-item">Send QR Codes</a>
     <a href="{% url 'db_display' 1 %}" class="navbar-item">View Database</a>
     <a href="{% url 'id_search' %}" class="navbar-item">Search by ID</a>
     <a href="{% url 'add_new_data' %}" class="navbar-item">Upload Data</a>
