cat fix attempt 2

--- a/hello/templates/hello/home.html
+++ b/hello/templates/hello/home.html
@@ -5,8 +5,8 @@
 
 <h1>Welcome to the check-in system v2</h1>
 {% if user.is_authenticated %}
-<img src="{% static 'home\guardia2\Web_app\static_collected\Dance_cat.gif' %}" alt="GIF Image">
-<p>Hi {{ user.username }}!</p>
+<img src="{% static 'home\guardia2\Web_app\\hello\static\hello\Dance_cat.gif' %}" alt="Dance cat" width="300" height="300">
+
 {% endif %}
 
 {% endblock %}
