--- a/hello/templates/hello/database_upload_page.html
+++ b/hello/templates/hello/database_upload_page.html
@@ -80,9 +80,9 @@
       After importing a new set of data, the old data will be backed up to the
       server. You can download the backup here.
     </p>
-    <form action="{% url 'download_backup' %}" method="post">
+    <form action="{% url 'dbbackup' %}" method="post">
       {% csrf_token %}
-      <button href="{% url 'download_backup' %}" class="btn btn-primary">Download backup</button>
+      <button href="{% url 'dbbackup' %}" class="btn btn-primary">Download backup</button>
     </form>
   </div>
 
