adding load static

--- a/hello/templates/hello/database_upload_page.html
+++ b/hello/templates/hello/database_upload_page.html
@@ -1,4 +1,5 @@
 {% extends "hello/layout.html" %} {% block title %} Upload New Database {% endblock %} {% block content %}
+{% load static %}
 
 <h2>Upload a new database file to the server</h2>
 
