updating display page to show email sent column

--- a/hello/templates/hello/db_display.html
+++ b/hello/templates/hello/db_display.html
@@ -37,6 +37,7 @@
       <th>Check In Time</th>
       <th>Table Number</th>
       <th>ID Number</th>
+      <th>Email Sent</th>
     </tr>
   </thead>
   <tbody>
