--- a/hello/templates/hello/home.html
+++ b/hello/templates/hello/home.html
@@ -5,7 +5,7 @@
 
 <h1>Welcome to the check-in system v2</h1>
 {% if user.is_authenticated %}
-<img src="{% static 'home\guardia2\Web_app\hello\static\hello\Dance_cat.gif' %}" alt="GIF Image">
+<img src="{% static 'hello\static\hello\Dance_cat.gif' %}" alt="GIF Image">
 <p>Hi {{ user.username }}!</p>
 {% endif %}
 
