removing extra messages and adding space for email

--- a/hello/templates/hello/db_display.html
+++ b/hello/templates/hello/db_display.html
@@ -53,6 +53,7 @@
       <td class="box">{{ row.7 }}</td>
       <td class="box">{{ row.8 }}</td>
       <td class="box">{{ row.9 }}</td>
+      <td class="box">{{ row.10 }}</td>
     </tr>
     {% endfor %}
   </tbody>
