trying different method for pass generation

--- a/hello/templates/hello/layout.html
+++ b/hello/templates/hello/layout.html
@@ -33,6 +33,10 @@
     {% endif %}
 
   </div>
+  <a href="{% url 'generate_pass' pass_instance.serial_number %}">
+    Add to Apple Wallet
+</a>
+
 
   <div class="body-content">
     {% block content %}
