testing layout fixes

--- a/hello/templates/hello/layout.html
+++ b/hello/templates/hello/layout.html
@@ -33,10 +33,9 @@
     {% endif %}
 
   </div>
-  <a href="{% url 'hello:generate_pass' pass_instance.serial_number %}">
+  <a href="{% url 'generate_pass' pass_instance.serial_number %}">
     Add to Apple Wallet
 </a>
-
 
 
   <div class="body-content">
