testing db relayout

--- a/hello/templates/hello/db_display.html
+++ b/hello/templates/hello/db_display.html
@@ -27,7 +27,8 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Company Name 0</th>
+      <th>ID Number</th>
+      <th>Company Name</th>
       <th>First Name 1</th>
       <th>Last Name2</th>
       <th>Email3</th>
