fixing html for db display

--- a/hello/templates/hello/db_display.html
+++ b/hello/templates/hello/db_display.html
@@ -29,16 +29,15 @@
     <tr>
       <th>ID Number</th>
       <th>Company Name</th>
-      <th>First Name 1</th>
-      <th>Last Name2</th>
-      <th>Email3</th>
-      <th>Alumni4</th>
-      <th>Can We Release Your Info5</th>
-      <th>Checked In7</th>
-      <th>Check In Time8</th>
-      <th>Table Number9</th>
-      <th>Email Sent10</th>
-      <th>ID Number6</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+      <th>Alumni</th>
+      <th>Can We Release Your Info</th>
+      <th>Check In Time</th>
+      <th>Table Number</th>
+      <th>Checked In</th>
+      <th>Email Sent</th>
     </tr>
   </thead>
   <tbody>
