--- a/hello/templates/hello/database_upload_page.html
+++ b/hello/templates/hello/database_upload_page.html
@@ -84,7 +84,7 @@
     </p>
     <form action="{% url 'dbbackup' %}" method="post">
       {% csrf_token %}
-      <button href="{% url 'dbbackup' %}" class="btn btn-primary">Download backup</button>
+      <button href="{% 'redirect_w_backup' %}" class="btn btn-primary">Download backup</button>
     </form>
   </div>
 
