--- a/hello/templates/hello/layout.html
+++ b/hello/templates/hello/layout.html
@@ -40,7 +40,7 @@
     {% endblock %}
     <hr />
     <footer>
-      <p>&copy; 2023</p>
+      <p>&copy; Benjamin Fauteux 2023</p>
     </footer>
   </div>
 </body>
