revert for meeting

--- a/hello/templates/hello/add_entry.html
+++ b/hello/templates/hello/add_entry.html
@@ -46,6 +46,10 @@
   <label for="release_info">Can We Release Your Info:</label>
   <input type="checkbox" id="release_info" name="release_info" /><br />
 
+  <label for="id_number">ID Number:</label>
+  <input type="text" id="id_number" name="id_number" required />
+  <br />
+
   <label for="table_number">Table Number:</label>
   <input type="text" id="table_number" name="table_number" />
   <br />
