changed instrctions from csv to excel

--- a/hello/templates/hello/database_upload_page.html
+++ b/hello/templates/hello/database_upload_page.html
@@ -13,7 +13,7 @@
   {% csrf_token %}
 
   <div class="form-group">
-    <label for="file">CSV File Path:</label>
+    <label for="file">.xlsx File Path:</label>
     <input type="file" class="form-control-file" id="file" name="file" />
   </div>
   <h2>Enter the letters of the columns which match the following fields</h2>
