changing html text

--- a/hello/templates/hello/database_upload_page.html
+++ b/hello/templates/hello/database_upload_page.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 
-<h2>Upload a new database file to the server</h2>
+<h2>Upload a new database file</h2>
 
 <form
   method="post"
