--- a/hello/templates/hello/add_entry.html
+++ b/hello/templates/hello/add_entry.html
@@ -15,7 +15,7 @@
 <div class="alert alert-danger" style="color: red">
   Please enter a valid email address
 </div>
-{% endif %}  {% if errors.table_number %}
+{% endif %} {% if errors.table_number %}
 <div class="alert alert-danger" style="color: red">
   Please enter a valid table number (no letters or special characters)
 </div>
@@ -54,6 +54,6 @@
   <input type="text" id="table_number" name="table_number" />
   <br />
 
-  <button type="submit" class="btn btn-primary">Add Entry</button>
+  <button type="submit" class="button">Add Entry</button>
 </form>
 {% endblock %}
