--- a/hello/templates/hello/database_upload_page.html
+++ b/hello/templates/hello/database_upload_page.html
@@ -4,12 +4,7 @@
 
 <h2>Upload a new database file</h2>
 
-<form
-  method="post"
-  enctype="multipart/form-data"
-  action="{% url 'add_new_data' %}"
-  class="entry-form"
->
+<form method="post" enctype="multipart/form-data" action="{% url 'add_new_data' %}" class="entry-form">
   {% csrf_token %}
 
   <div class="form-group">
@@ -19,30 +14,15 @@
   <h2>Enter the letters of the columns which match the following fields</h2>
   <div class="form-group">
     <label for="Company_Name_box">Company Name:</label>
-    <input
-      type="text"
-      class="form-control"
-      id="Company_Name_box"
-      name="Company_Name_box"
-    />
+    <input type="text" class="form-control" id="Company_Name_box" name="Company_Name_box" />
   </div>
   <div class="form-group">
     <label for="First_Name_box">First Name:</label>
-    <input
-      type="text"
-      class="form-control"
-      id="First_Name_box"
-      name="First_Name_box"
-    />
+    <input type="text" class="form-control" id="First_Name_box" name="First_Name_box" />
   </div>
   <div class="form-group">
     <label for="Last_Name_box">Last Name:</label>
-    <input
-      type="text"
-      class="form-control"
-      id="Last_Name_box"
-      name="Last_Name_box"
-    />
+    <input type="text" class="form-control" id="Last_Name_box" name="Last_Name_box" />
   </div>
   <div class="form-group">
     <label for="Email_box">Email:</label>
@@ -54,28 +34,18 @@
   </div>
   <div class="form-group">
     <label for="Info_Release_box">Can we release your info:</label>
-    <input
-      type="text"
-      class="form-control"
-      id="Info_Release_box"
-      name="Info_Release_box"
-    />
+    <input type="text" class="form-control" id="Info_Release_box" name="Info_Release_box" />
   </div>
   <div class="form-group">
     <label for="Table_Number_box">Table Number:</label>
-    <input
-      type="text"
-      class="form-control"
-      id="Table_Number_box"
-      name="Table_Number_box"
-    />
+    <input type="text" class="form-control" id="Table_Number_box" name="Table_Number_box" />
   </div>
 
-  <button class="btn btn-primary" name="import" type="submit">Upload</button>
+  <button class="button" name="import" type="submit">Upload</button>
 
   <br />
 
-  <button class="btn btn-primary" name="export" type="submit">Export</button>
+  <button class="button" name="export" type="submit">Export</button>
   <br />
   <div style="color: white">
     <p>
@@ -84,9 +54,9 @@
     </p>
     <form action="{% url 'dbbackup' %}" method="post">
       {% csrf_token %}
-      <button type="submit" class="btn btn-primary">Download backup</button>
+      <button type="submit" class="button">Download backup</button>
     </form>
-</div>
+  </div>
 
 
   {% endblock %}
