--- a/hello/templates/hello/search.html
+++ b/hello/templates/hello/search.html
@@ -20,84 +20,49 @@
       <th>Company Name:</th>
       <td>
         {% if entry %}
-        <input
-          type="text"
-          name="company_name"
-          value="{{ entry.company_name }}"
-        />
+        <input type="text" name="company_name" value="{{ entry.company_name }}" />
         {% endif %}
       </td>
     </tr>
     <tr>
       <th>First Name:</th>
       <td>
-        {% if entry %}<input
-          type="text"
-          name="first_name"
-          value="{{ entry.first_name }}"
-        />
+        {% if entry %}<input type="text" name="first_name" value="{{ entry.first_name }}" />
         {% endif %}
       </td>
     </tr>
     <tr>
       <th>Email:</th>
       <td>
-        {% if entry %}<input
-          type="email"
-          name="email"
-          value="{{ entry.email }}"
-        />
+        {% if entry %}<input type="email" name="email" value="{{ entry.email }}" />
         {% endif %}
       </td>
     </tr>
     <tr>
       <th>Alumni:</th>
       <td>
-        {% if entry %}<input
-          type="checkbox"
-          name="alumni"
-          {%
-          if
-          entry.alumni
-          %}
-          checked
-          {%
-          endif
-          %}
-        />{% endif %}
+        {% if entry %}<input type="checkbox" name="alumni" {% if entry.alumni %} checked {% endif %} />{% endif %}
       </td>
     </tr>
     <tr>
       <th>Can We Release Your Info:</th>
       <td>
-        {% if entry %}<input
-          type="checkbox"
-          name="release_info"
-          {%
-          if
-          entry.release_info
-          %}checked{%
-          endif
-          %}
-        />{% endif %}
+        {% if entry %}<input type="checkbox" name="release_info" {% if entry.release_info %}checked{% endif %} />{%
+        endif %}
       </td>
     </tr>
 
     <tr>
       <th>ID Number:</th>
       <td>
-        {% if entry %}<input
-          type="text"
-          name="id_number"
-          value="{{ entry.id_number }}"
-        />{% endif %}
+        {% if entry %}<input type="text" name="id_number" value="{{ entry.id_number }}" />{% endif %}
       </td>
     </tr>
 
     <tr>
       <td colspan="2">
         {% if entry %}
-        <button type="submit" class="btn btn-primary">Check-in</button>
+        <button type="submit" class="button">Check-in</button>
         {% endif %}
       </td>
     </tr>
