--- a/hello/templates/hello/search.html
+++ b/hello/templates/hello/search.html
@@ -47,8 +47,7 @@
     <tr>
       <th>Can We Release Your Info:</th>
       <td>
-        {% if entry %}<input type="checkbox" name="release_info" {% if entry.release_info %}checked{% endif %} />{%
-        endif %}
+        {% if entry %}<input type="checkbox" name="release_info" {% if entry.release_info %}checked{% endif %} />{% endif %}
       </td>
     </tr>
 
