adjusting css relation

--- a/hello/templates/hello/database_upload_page.html
+++ b/hello/templates/hello/database_upload_page.html
@@ -1,5 +1,6 @@
 {% extends "hello/layout.html" %} {% block title %} Upload New Database {% endblock %} {% block content %}
 {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'hello\static\hello\site.css' %}" />
 
 
 <h2>Upload a new database file</h2>
