--- a/hello/templates/hello/layout.html
+++ b/hello/templates/hello/layout.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>{% block title %}{% endblock %}</title>
   {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'hello\static\hello\site.css' %}" />
 </head>
 
 <h2>System messages</h2>
