adding css links

--- a/hello/static/hello/site.css
+++ b/hello/static/hello/site.css
@@ -73,7 +73,7 @@ table {
     padding: 5px;
   }
 
-.button {
+.btn {
     background-color: #F76902;
     border: 1px solid #F76902;
     color: white;
