--- a/hello/templates/hello/db_display.html
+++ b/hello/templates/hello/db_display.html
@@ -1,5 +1,7 @@
 {% extends "hello/layout.html" %} {% block title %} Database Display
 {%endblock%} {% block content %}
+{% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'hello\static\hello\site.css' %}" />
 
 <h2>Database Display</h2>
 
