--- a/hello/templates/hello/qr_code/send_qr_code.html
+++ b/hello/templates/hello/qr_code/send_qr_code.html
@@ -1,4 +1,8 @@
 {% extends "hello/layout.html" %} {% block content %}
+
+{% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'hello\static\hello\site.css' %}" />
+
 <h2>Enter the id number to send the QR code to</h2>
 <form id="qrCodeForm" action="{% url 'send_qr_code' %}" method="post">
   {% csrf_token %}
