--- a/hello/templates/hello/self_registration_page.html
+++ b/hello/templates/hello/self_registration_page.html
@@ -1,5 +1,8 @@
 {% extends "hello/layout.html" %} {% block title %} Add Entry {% endblock %}
 {%block content %}
+{% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'hello\static\hello\site.css' %}" />
+
 <h2>Add Entry</h2>
 
 <!-- Error messages -->
@@ -42,6 +45,6 @@
   <label for="release_info">Can We Release Your Info:</label>
   <input type="checkbox" id="release_info" name="release_info" /><br />
 
-  <button type="submit" class="button">Add Entry</button>
+  <button type="submit" class="btn">Add Entry</button>
 </form>
 {% endblock %}
