--- a/hello/templates/hello/search.html
+++ b/hello/templates/hello/search.html
@@ -1,6 +1,6 @@
 {% extends 'hello/layout.html' %} {% block content %}
 {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'hello\static\hello\site.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'static/hello/site.css' %}" />
 
 <h1>Search by ID Number</h1>
 <form method="get" action="{% url 'search_by_id' %}">
@@ -50,7 +50,8 @@
     <tr>
       <th>Can We Release Your Info:</th>
       <td>
-        {% if entry %}<input type="checkbox" name="release_info" {% if entry.release_info %}checked{% endif %} />{% endif %}
+        {% if entry %}<input type="checkbox" name="release_info" {% if entry.release_info %}checked{% endif %} />{%
+        endif %}
       </td>
     </tr>
 
