--- a/hello/templates/hello/search.html
+++ b/hello/templates/hello/search.html
@@ -1,4 +1,6 @@
-{% extends 'hello/layout.html' %} {% block content %}
+{% extends 'hello/layout.html' %} 
+{% block content %}
+
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'static/hello/site.css' %}" />
 
