fixing .css reference

--- a/hello/static/hello/site.css
+++ b/hello/static/hello/site.css
@@ -75,7 +75,7 @@ table {
 
 .btn {
     background-color: #F76902;
-    border: 1px solid #F76902;
+    border: 1px solid #000000;
     color: white;
     padding: 5px 10px;
     text-align: center;
