--- a/hello/templates/hello/home.html
+++ b/hello/templates/hello/home.html
@@ -1,5 +1,7 @@
 {% extends "hello/layout.html" %}
 {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
+  
 {% block title %} Home {% endblock %}
 {% block content %}
 
