--- a/hello/templates/hello/about.html
+++ b/hello/templates/hello/about.html
@@ -1,4 +1,7 @@
 {% extends "hello/layout.html" %}
+{% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
+
 {% block title %}
     About
 {% endblock %}
