--- a/hello/templates/hello/add_entry.html
+++ b/hello/templates/hello/add_entry.html
@@ -1,7 +1,7 @@
 {% extends "hello/layout.html" %} {% block title %} Add Entry {% endblock %}
 {%block content %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'static/hello/site.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
 
 <h2>Add Entry</h2>
 
