--- a/hello/templates/hello/db_display.html
+++ b/hello/templates/hello/db_display.html
@@ -1,7 +1,7 @@
 {% extends "hello/layout.html" %} {% block title %} Database Display
 {%endblock%} {% block content %}
 {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'static/hello/site.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
 
 <h2>Database Display</h2> 
 
@@ -13,8 +13,6 @@
     >Previous</a
   >
   {% endif %}
-
-  <link rel="stylesheet" type="text/css" href="hello\static\hello\site.css" />
 
   <span class="current-page">{{ page_obj.number }}</span>
 
