--- a/hello/templates/hello/layout.html
+++ b/hello/templates/hello/layout.html
@@ -5,16 +5,17 @@
   <meta charset="utf-8" />
   <title>{% block title %}{% endblock %}</title>
   {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'hello\static\hello\site.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
 </head>
-
-<h2>System messages</h2>
-{% if messages %}
-<ul class="messages">
-  {% for message in messages %}
-  <li>{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-  {% endfor %}
-</ul>
+{% if user.is_authenticated %}
+  <h2>System messages</h2>
+  {% if messages %}
+  <ul class="messages">
+    {% for message in messages %}
+    <li>{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %}
 {% endif %}
 
 <body>
