--- a/hello/templates/hello/search.html
+++ b/hello/templates/hello/search.html
@@ -2,13 +2,13 @@
 {% block content %}
 
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'static/hello/site.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
 
 <h1>Search by ID Number</h1>
 <form method="get" action="{% url 'search_by_id' %}">
   <label for="id_number">ID Number:</label>
   <input type="text" name="id_number" id="id_number" />
-  <button type="submit">Search</button>
+  <button class="btn" type="submit">Search</button>
 </form>
 
 {% if not entry %}
@@ -52,8 +52,8 @@
     <tr>
       <th>Can We Release Your Info:</th>
       <td>
-        {% if entry %}<input type="checkbox" name="release_info" {% if entry.release_info %}checked{% endif %} />{%
-        endif %}
+        {% if entry %}<input type="checkbox" name="release_info" {% if entry.release_info %}checked{% endif %} />
+        {% endif %}
       </td>
     </tr>
 
