--- a/hello/templates/hello/qr_code/qr_code_email.html
+++ b/hello/templates/hello/qr_code/qr_code_email.html
@@ -7,8 +7,7 @@ please contact us at _______. We look forward to seeing you at the Career Fair!
 id number: {{ id_number }}
 
 Click the below link to show your check-in code:
-https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl={{id_number}}
-
+<img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl={{id_number}}" alt="QR Code">
 
 
 This email was sent from the website at the push of a button!
