--- a/hello/templates/hello/self_registration_page.html
+++ b/hello/templates/hello/self_registration_page.html
@@ -3,7 +3,7 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
 
-<h2>Add Entry</h2>
+<h2>Enter your information below</h2>
 
 <!-- Error messages -->
 {% if errors.first_name %}
