removing orange buttons and id and table number spot

--- a/hello/static/hello/site.css
+++ b/hello/static/hello/site.css
@@ -73,7 +73,7 @@ table {
     padding: 5px;
   }
 
-.btn {
+/* .btn {
     background-color: #F76902;
     border: 1px solid #000000;
     color: white;
@@ -84,4 +84,4 @@ table {
     font-size: 12px;
     margin: 2px 2px;
     cursor: pointer;
-  }
+  } */
