--- a/hello/templates/hello/self_registration_page.html
+++ b/hello/templates/hello/self_registration_page.html
@@ -1,33 +1,35 @@
 {% extends "hello/layout.html" %}
-{% block title %} Add Entry {% endblock %}
+{% block title %} Self Registration {% endblock %}
 {% block content %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
 
 <div class="container">
     <div class="left-column">
-        <h2>Enter your information below</h2>
+        <h2>Welcome to EventCheck-In Self Registration</h2>
 
         <!-- Error messages -->
         {% if errors.first_name %}
         <div class="alert alert-danger" style="color: red">
-            Please enter a valid first name (no special characters or numbers)
+            Please enter a valid first name (no special characters or numbers).
         </div>
         {% endif %}
         {% if errors.last_name %}
         <div class="alert alert-danger" style="color: red">
-            Please enter a valid last name (no special characters or numbers)
+            Please enter a valid last name (no special characters or numbers).
         </div>
         {% endif %}
         {% if errors.email %}
         <div class="alert alert-danger" style="color: red">
-            Please enter a valid email address
+            Please enter a valid email address.
         </div>
         {% endif %}
 
         <form method="POST" action="{% url 'self_registration' %}" class="entry-form">
             {% csrf_token %}
-            <!-- Form fields with error messages -->
+            <p>Provide your information below to register for the event:</p>
+
+            <!-- Form fields with clear labels -->
             <label for="company_name">Company Name:</label>
             <input type="text" id="company_name" name="company_name" required />
             <br />
@@ -44,18 +46,19 @@
             <input type="email" id="email" name="email" required />
             <br />
 
-            <label for="alumni">Alumni:</label>
+            <label for="alumni">Are you an Alumni?</label>
             <input type="checkbox" id="alumni" name="alumni" /><br />
 
-            <label for="release_info">Can We Release Your Info:</label>
+            <label for="release_info">Can We Release Your Information?</label>
             <input type="checkbox" id="release_info" name="release_info" /><br />
 
-            <button type="submit" class="btn">Add Entry</button>
+            <button type="submit" class="btn">Register</button>
         </form>
     </div>
     <div class="right-column">
         <!-- Text to be displayed on the right side -->
-        <p>Your additional text goes here.</p>
+        <h3>What Happens Next?</h3>
+        <p>Once you submit your information, you will receive an email from admin@eventcheck-in.com containing your QR code. This QR code will grant you access to the event. Please ensure the accuracy of your information before submitting.</p>
     </div>
 </div>
 {% endblock %}
