testing different static filepaths

--- a/hello/templates/hello/self_registration_page.html
+++ b/hello/templates/hello/self_registration_page.html
@@ -2,11 +2,11 @@
 {% block title %} Self Registration {% endblock %}
 {% block content %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'static/hello/site.css' %}" />
 
 <div class="container">
     <div class="left-column">
-        <h2>Welcome to EventCheck-In Self Registration</h2>
+        <h2>Welcome to the RIT Career Fair Self Registration</h2>
 
         <!-- Error messages -->
         {% if errors.first_name %}
