updating side text on pages

--- a/hello/templates/hello/self_registration_page.html
+++ b/hello/templates/hello/self_registration_page.html
@@ -58,7 +58,7 @@
     <div class="right-column"  style="flex: 1;">
         <!-- Text to be displayed on the right side -->
         <h3>What Happens Next?</h3>
-        <p>Once you submit your information, you will receive an email from admin@eventcheck-in.com containing your QR code. This QR code will grant you access to the event. Please ensure the accuracy of your information before submitting.</p>
+        <p>Once you submit your information, you will receive an email from ritadmin@eventcheck-in.com containing your QR code. This QR code will grant you access to the event. Please ensure the accuracy of your information before submitting.</p>
     </div>
 </div>
 {% endblock %}
