updating instructions text

--- a/hello/static/hello/site.css
+++ b/hello/static/hello/site.css
@@ -103,7 +103,11 @@ table {
     flex: 1; /* This makes the right column take up 50% of the container width */
     padding: 20px; /* Add some padding for spacing */
 }
- 
+
+.indent-1 {
+    margin-left: 20px;
+    font-size: 17px;
+  }
 
 
 /* .btn {
