--- a/hello/templates/hello/search.html
+++ b/hello/templates/hello/search.html
@@ -4,80 +4,105 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
 
-<h1>Search by ID Number</h1>
-<form method="get" action="{% url 'search_by_id' %}">
-  <label for="id_number">ID Number:</label>
-  <input type="text" name="id_number" id="id_number" />
-  <button class="btn" type="submit">Search</button>
-</form>
+<div class="container" style="display: flex;">
+  <div class="left-column" style="flex: 1;">
+    <h1>Search by ID Number</h1>
+    <form method="get" action="{% url 'search_by_id' %}">
+      <label for="id_number">ID Number:</label>
+      <input type="text" name="id_number" id="id_number" />
+      <button class="btn" type="submit">Search</button>
+    </form>
 
-{% if not entry %}
-<div class="alert alert-danger" style="color: red">
-  There is no corresponding entry for that number.
+    {% if not entry %}
+    <div class="alert alert-danger" style="color: red">
+      There is no corresponding entry for that number.
+    </div>
+    {% endif %}
+
+    <h2>Result:</h2>
+    <form method="POST" action="{% url 'submit_form' %}" class="entry-form">
+      {% csrf_token %}
+      <table>
+        <tr>
+          <th>Company Name:</th>
+          <td>
+            {% if entry %}
+            <input type="text" name="company_name" value="{{ entry.company_name }}" />
+            {% endif %}
+          </td>
+        </tr>
+        <tr>
+          <th>First Name:</th>
+          <td>
+            {% if entry %}<input type="text" name="first_name" value="{{ entry.first_name }}" />
+            {% endif %}
+          </td>
+        </tr>
+        <tr>
+          <th>Last Name:</th>
+          <td>
+            {% if entry %}<input type="text" name="last_name" value="{{ entry.last_name }}" />
+            {% endif %}
+          </td>
+        </tr>
+        <tr>
+          <th>Email:</th>
+          <td>
+            {% if entry %}<input type="email" name="email" value="{{ entry.email }}" />
+            {% endif %}
+          </td>
+        </tr>
+        <tr>
+          <th>Alumni:</th>
+          <td>
+            {% if entry %}<input type="checkbox" name="alumni" {% if entry.alumni %} checked {% endif %} />{% endif %}
+          </td>
+        </tr>
+        <tr>
+          <th>Can We Release Your Info:</th>
+          <td>
+            {% if entry %}<input type="checkbox" name="release_info" {% if entry.release_info %}checked{% endif %} />
+            {% endif %}
+          </td>
+        </tr>
+
+        <tr>
+          <th>ID Number:</th>
+          <td>
+            {% if entry %}<input type="text" name="id_number" value="{{ entry.id_number }}" />{% endif %}
+          </td>
+        </tr>
+
+        <tr>
+          <td colspan="2">
+            {% if entry %}
+            <button type="submit" class="btn">Check-in</button>
+            {% endif %}
+          </td>
+        </tr>
+      </table>
+    </form>
+  </div>
+  <div class="right-column" style="flex: 1;">
+    <!-- Text to be displayed on the right side -->
+    <h3>This page is for scanning QR codes that attendes have</h3>
+    <div style="font-size: 20px; line-height: 1.6;">
+      <p>
+        <br/> 
+        1.  Make sure to click into the textbox before scanning.
+        <br/>
+          <div class="indent1" style="font-size: 17px; margin-left: 20px">a. If the number scans twice, clear the textbox and try again. </div>
+          <br/>  
+        2. Click the "Search" button once the number is scanned.
+        <br/>
+        <div class="indent1" style="font-size: 17px; margin-left: 20px">a. If the number is not found, the page will display an error message. </div>
+          <br/>
+          <div class="indent1" style="font-size: 17px; margin-left: 20px">b. If the number is found, the page will display the attendee's information. </div>
+          <br/>
+        3. Verify that the info is accurate and click the "Check-in" button.
+        <br/>
+        </p>
+      </div>   
+  </div>
 </div>
-{% endif %}
-
-<h2>Result:</h2>
-<form method="POST" action="{% url 'submit_form' %}" class="entry-form">
-  {% csrf_token %}
-  <table>
-    <tr>
-      <th>Company Name:</th>
-      <td>
-        {% if entry %}
-        <input type="text" name="company_name" value="{{ entry.company_name }}" />
-        {% endif %}
-      </td>
-    </tr>
-    <tr>
-      <th>First Name:</th>
-      <td>
-        {% if entry %}<input type="text" name="first_name" value="{{ entry.first_name }}" />
-        {% endif %}
-      </td>
-    </tr>
-    <tr>
-      <th>Last Name:</th>
-      <td>
-        {% if entry %}<input type="text" name="last_name" value="{{ entry.last_name }}" />
-        {% endif %}
-      </td>
-    </tr>
-    <tr>
-      <th>Email:</th>
-      <td>
-        {% if entry %}<input type="email" name="email" value="{{ entry.email }}" />
-        {% endif %}
-      </td>
-    </tr>
-    <tr>
-      <th>Alumni:</th>
-      <td>
-        {% if entry %}<input type="checkbox" name="alumni" {% if entry.alumni %} checked {% endif %} />{% endif %}
-      </td>
-    </tr>
-    <tr>
-      <th>Can We Release Your Info:</th>
-      <td>
-        {% if entry %}<input type="checkbox" name="release_info" {% if entry.release_info %}checked{% endif %} />
-        {% endif %}
-      </td>
-    </tr>
-
-    <tr>
-      <th>ID Number:</th>
-      <td>
-        {% if entry %}<input type="text" name="id_number" value="{{ entry.id_number }}" />{% endif %}
-      </td>
-    </tr>
-
-    <tr>
-      <td colspan="2">
-        {% if entry %}
-        <button type="submit" class="btn">Check-in</button>
-        {% endif %}
-      </td>
-    </tr>
-  </table>
-</form>
 {% endblock %}
